# syllogix

./: Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
framework/: __init__.py  config.py  framework.py  llm.py  models.py  nlp.py  schemas.py
framework/agents/: __init__.py
framework/engines/: __init__.py  deductive.py
framework/rag/: __init__.py
tests/: conftest.py  test_main.py
tests/engines/: test_deductive.py
tests/framework/: test_framework.py  test_llm.py  test_reasoning_chain.py  test_schemas.py  test_singular_terms.py
